--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,16 @@ rand = "0.8"
 regex = "0.1"
 serialport = "4.3.0"
 shlex = "1.3.0"
+image = { version = "0.24", features = ["png"] }
+chrono = "0.4"
 
 [dev-dependencies]
 assert_cmd = "2"
 predicates = "2"
+
+[package.metadata.bundle]
+name = "Mobitia" # アプリケーション名
+identifier = "com.yourcompany.mobitia" # バンドル識別子 (ユニークなもの)
+icon = ["icons/icon.icns"] # macOSアプリのアイコンファイル (後で作成)
+resources = [] # アプリケーションに含めるリソースファイル (フォントなど)
+category = "Utility" # macOSでのカテゴリ (Optional)
