--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.100"
 clap = { version = "4.5.4", features = ["derive"] }
-eframe = "0.27.2"
+eframe = { version = "0.27.2", features = ["persistence"] }
 pretty_assertions = "1.4.1"
 rand = "0.8"
 regex = "0.1"
