--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serialport = "4.3.0"
 shlex = "1.3.0"
 image = { version = "0.24", features = ["png"] }
 chrono = "0.4"
+dirs = "5.0.1"
 
 [dev-dependencies]
 assert_cmd = "2"
