--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ shlex = "1.3.0"
 image = { version = "0.24", features = ["png"] }
 chrono = "0.4"
 dirs = "5.0.1"
+nalgebra = "0.34.1"
 
 [dev-dependencies]
 assert_cmd = "2"
