--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ image = { version = "0.24", features = ["png"] }
 chrono = "0.4"
 dirs = "5.0.1"
 nalgebra = "0.34.1"
+ndarray = "0.15"
 
 [dev-dependencies]
 assert_cmd = "2"
