--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,19 +4,23 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.100"
-clap = { version = "4.5.4", features = ["derive"] }
-eframe = { version = "0.27.2", features = ["persistence"] }
-rand = "0.8"
-
+clap = { version = "4.4.11", features = ["derive"] }
+eframe = { version = "0.24.1", features = ["persistence"] } # Added persistence feature
+egui = "0.24.1"
+egui_extras = { version = "0.24.1", features = ["image", "svg"] }
+image = { version = "0.24", default-features = false, features = ["png"] }
+libloading = "0.8.1"
+nalgebra = "0.32.3"
+rppal = { version = "0.17.1", optional = true } # Raspberry Pi GPIO support
 serialport = "4.3.0"
-shlex = "1.3.0"
-image = { version = "0.24", features = ["png"] }
-chrono = "0.4"
+shlex = "1.1.0"
+web-time = "0.2.1"
 dirs = "5.0.1"
-nalgebra = "0.34.1"
-ndarray = "0.15"
-web-time = "0.2"
+chrono = "0.4.31" # For timestamps, etc.
+serde = { version = "1.0", features = ["derive"] } # Added for serialization
+serde_yaml = "0.9" # Added for YAML serialization
+anyhow = "1.0" # Added
+rand = "0.8" # Added
 
 [dev-dependencies]
 assert_cmd = "2"
