--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ web-time = "0.2.1"
 dirs = "5.0.1"
 chrono = "0.4.31" # For timestamps, etc.
 serde = { version = "1.0", features = ["derive"] } # Added for serialization
+toml = "0.8"
 serde_yaml = "0.9" # Added for YAML serialization
 regex = "1.10.2" # Added for regex matching
 anyhow = "1.0" # Added
