--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ lazy_static = "1.5.0"
 nokhwa = { version = "0.10.10", features = ["input-avfoundation"] }
 hidapi = "2.6.4"
 serde_json = "1.0.148"
+crc = "2.0.0" # CRC-16 (Modbus)を計算するために追加
 modbus-rtu = "1.3.0"
 
 [dev-dependencies]
