--- a/config.toml
+++ b/config.toml
@@ -180,24 +180,30 @@ tracking_wxy = 0.05
 tracking_wa_degrees = 2.0
 tracking_population_size = 30
 tracking_generations = 5
-lookahead_distance = 1.0
-target_velocity = 0.3
-goal_tolerance = 0.2
+lookahead_distance = 0.8
+target_velocity = 0.2
+goal_tolerance = 0.5
 debug_show_corner_cells = true
-lidar_avoid_dist = 0.5
+lidar_avoid_dist = 0.2
 collision_check_predict_time = 1.0
 
 [nav.dwa]
 max_accel_v = 0.5   # 並進加速度上限 (m/s^2)
 max_accel_w = 1.0   # 回転加速度上限 (rad/s^2)
-max_speed_v = 0.5   # 最大並進速度 (m/s)
+max_speed_v = 1.0   # 最大並進速度 (m/s)
 max_speed_w = 0.5   # 最大回転速度 (rad/s)
 predict_time = 2.0  # 予測時間 (秒) - これを長くすると早めに回避しますが、狭い場所で動きにくくなる場合があります
 dt = 0.1            # シミュレーション刻み時間 (秒)
 v_samples = 6       # 速度のサンプル数
 w_samples = 11      # 角速度のサンプル数
 
+[nav.elastic_band]
+internal_force_gain = 0.5  # バネの力を強めて経路の形状を維持する
+external_force_gain = 0.4 # 障害物からの反発を弱めて過敏な反応を抑える
+obstacle_safety_dist = 0.5 # 影響を受ける距離を適切に制限する
+num_iterations = 5         # 1フレームあたりの計算回数を抑えて安定させる
+
 [robot]
-width = 0.6
+width = 0.4
 length = 0.6
-min_mapping_dist = 0.5
+min_mapping_dist = 0.4
