--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,10 @@ hidapi = "2.6.4"
 serde_json = "1.0.148"
 crc = "2.0.0" # CRC-16 (Modbus)を計算するために追加
 modbus-rtu = "1.3.0"
+tracing = "0.1.44"
+tracing-subscriber = "0.3.22"
+tracing-appender = "0.2.4"
+tracing-chrome = "0.7.2"
 
 [dev-dependencies]
 assert_cmd = "2"
