--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ tracing = "0.1.44"
 tracing-subscriber = "0.3.22"
 tracing-appender = "0.2.4"
 tracing-chrome = "0.7.2"
+rayon = "1.11.0"
 
 [dev-dependencies]
 assert_cmd = "2"
